--- a/resources/css/scss/home.scss
+++ b/resources/css/scss/home.scss
@@ -109,7 +109,7 @@
             background: linear-gradient(90deg, #288FB1, 15%, #000, 85%, #288FB1,);
          }*/
       }
-      &:nth-child(4){
+  /*    &:nth-child(4){
          .feature-portfolio__container{
             .feature-portfolio__body:nth-child(3){
                .item-feature:nth-child(1){
@@ -121,9 +121,9 @@
                }
             }
          }
-      }
-   }
+      }*/
 
+   }
   /* &__body{
       position: relative;
       border-radius: 25px;
